removed full link from fetch

--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
       formData.append("file", blob, "digit.png");
 
       try {
-        const response = await fetch("http://127.0.0.1:5000/predict", {
+        const response = await fetch("/predict", {
           method: "POST",
           body: formData 
         });
